// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`reference rooms > L-shaped room 1`] = `
{
  "byLayer": {
    "clip": 160,
    "furring": 21,
    "hanger": 65,
    "tsr": 10,
    "wall_angle": 6,
  },
  "issues": [],
  "members": 262,
  "setout": [
    {
      "degrees": 90,
      "origin": {
        "x": 4000,
        "y": 4500,
      },
      "reason": "parallel to the longest wall (9000mm, 90 degrees)",
    },
  ],
  "spacings": [
    {
      "furring": {
        "governedBy": "layers.furring.maxSpacing",
        "spacing": 450,
      },
      "tsr": {
        "governedBy": "layers.tsr.maxSpacing",
        "spacing": 1200,
      },
    },
  ],
  "totalCutLength": 270700,
}
`;

exports[`reference rooms > L-shaped room skewed 7 degrees with two columns 1`] = `
{
  "byLayer": {
    "clip": 159,
    "furring": 23,
    "hanger": 65,
    "tsr": 11,
    "wall_angle": 8,
  },
  "issues": [
    "warning END_OVERHANG",
    "warning END_OVERHANG",
    "warning END_OVERHANG",
    "warning OPENING_EDGE_UNSUPPORTED",
  ],
  "members": 266,
  "setout": [
    {
      "degrees": 97.001,
      "origin": {
        "x": 3421.5,
        "y": 4710,
      },
      "reason": "parallel to the longest wall (9000mm, 97.001 degrees)",
    },
  ],
  "spacings": [
    {
      "furring": {
        "governedBy": "layers.furring.maxSpacing",
        "spacing": 450,
      },
      "tsr": {
        "governedBy": "layers.tsr.maxSpacing",
        "spacing": 1200,
      },
    },
  ],
  "totalCutLength": 272721,
}
`;

exports[`reference rooms > exposed T-bar grid 1`] = `
{
  "byLayer": {
    "cross_tee_1200": 42,
    "hanger": 36,
    "main_tee": 6,
    "perimeter_angle": 4,
  },
  "issues": [],
  "members": 88,
  "setout": [
    {
      "degrees": 0,
      "origin": {
        "x": 3000,
        "y": 2000,
      },
      "reason": "parallel to the longest wall (6000mm, 0 degrees)",
    },
  ],
  "spacings": [
    {
      "cross_tee_1200": {
        "governedBy": "layers.cross_tee_1200.module",
        "spacing": 1200,
      },
      "main_tee": {
        "governedBy": "layers.main_tee.module",
        "spacing": 1200,
      },
    },
  ],
  "totalCutLength": 103760,
}
`;

exports[`reference rooms > plain 6x4 room 1`] = `
{
  "byLayer": {
    "clip": 66,
    "furring": 11,
    "hanger": 30,
    "tsr": 6,
    "wall_angle": 4,
  },
  "issues": [],
  "members": 117,
  "setout": [
    {
      "degrees": 0,
      "origin": {
        "x": 3000,
        "y": 2000,
      },
      "reason": "parallel to the longest wall (6000mm, 0 degrees)",
    },
  ],
  "spacings": [
    {
      "furring": {
        "governedBy": "layers.furring.maxSpacing",
        "spacing": 450,
      },
      "tsr": {
        "governedBy": "layers.tsr.maxSpacing",
        "spacing": 1200,
      },
    },
  ],
  "totalCutLength": 127400,
}
`;

exports[`reference rooms > purlins above at 1500 centres 1`] = `
{
  "byLayer": {
    "bridging": 12,
    "clip": 66,
    "furring": 11,
    "hanger": 30,
    "tsr": 6,
    "wall_angle": 4,
  },
  "issues": [
    "info BRIDGING_ADDED",
    "warning HANGER_NEEDS_BRIDGING",
    "warning HANGER_NEEDS_BRIDGING",
    "warning HANGER_NEEDS_BRIDGING",
    "warning HANGER_NEEDS_BRIDGING",
    "warning HANGER_NEEDS_BRIDGING",
    "warning HANGER_NEEDS_BRIDGING",
    "warning HANGER_NEEDS_BRIDGING",
    "warning HANGER_NEEDS_BRIDGING",
    "warning HANGER_NEEDS_BRIDGING",
    "warning HANGER_NEEDS_BRIDGING",
    "warning HANGER_NEEDS_BRIDGING",
    "warning HANGER_NEEDS_BRIDGING",
  ],
  "members": 129,
  "setout": [
    {
      "degrees": 0,
      "origin": {
        "x": 3000,
        "y": 2000,
      },
      "reason": "parallel to the longest wall (6000mm, 0 degrees)",
    },
  ],
  "spacings": [
    {
      "furring": {
        "governedBy": "layers.furring.maxSpacing",
        "spacing": 450,
      },
      "tsr": {
        "governedBy": "layers.tsr.maxSpacing",
        "spacing": 1200,
      },
    },
  ],
  "totalCutLength": 151400,
}
`;

exports[`reference rooms > raked 1:20 1`] = `
{
  "byLayer": {
    "clip": 66,
    "furring": 11,
    "hanger": 30,
    "tsr": 6,
    "wall_angle": 4,
  },
  "issues": [],
  "members": 117,
  "setout": [
    {
      "degrees": 0,
      "origin": {
        "x": 3000,
        "y": 2000,
      },
      "reason": "parallel to the longest wall (6000mm, 0 degrees)",
    },
  ],
  "spacings": [
    {
      "furring": {
        "governedBy": "layers.furring.maxSpacing",
        "spacing": 450,
      },
      "tsr": {
        "governedBy": "layers.tsr.maxSpacing",
        "spacing": 1200,
      },
    },
  ],
  "totalCutLength": 122997,
}
`;

exports[`reference rooms > services: 14 downlights and 3 diffusers 1`] = `
{
  "byLayer": {
    "clip": 64,
    "furring": 20,
    "hanger": 32,
    "tsr": 8,
    "wall_angle": 16,
  },
  "issues": [
    "error MEMBER_UNSUPPORTED",
    "error MEMBER_UNSUPPORTED",
    "error MEMBER_UNSUPPORTED",
    "error MEMBER_UNSUPPORTED",
    "error MEMBER_UNSUPPORTED",
    "error MEMBER_UNSUPPORTED",
    "warning END_OVERHANG",
    "warning END_OVERHANG",
    "warning END_OVERHANG",
    "warning END_OVERHANG",
    "warning END_OVERHANG",
    "warning END_OVERHANG",
  ],
  "members": 140,
  "setout": [
    {
      "degrees": 0,
      "origin": {
        "x": 3000,
        "y": 2000,
      },
      "reason": "parallel to the longest wall (6000mm, 0 degrees)",
    },
  ],
  "spacings": [
    {
      "furring": {
        "governedBy": "layers.furring.maxSpacing",
        "spacing": 450,
      },
      "tsr": {
        "governedBy": "layers.tsr.maxSpacing",
        "spacing": 1200,
      },
    },
  ],
  "totalCutLength": 138510,
}
`;
